# Inside of setup.cfg
[metadata]
name = pyloading_bar
version = 0.1.0
author = Nalbert Gabriel Melo Leal
author_email = nalbertgml@gmail.com
description = A python loading bar to use in terminal applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NalbertLeal/pyloading_bar
project_urls =
    Bug Tracker = https://github.com/NalbertLeal/pyloading_bar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src